# spycon

./: .buildinfo  .gitignore  LICENSE  README.html  README.md  genindex.html  index.html  inference.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  utilities.html
.doctrees/: README.doctree  environment.pickle  index.doctree  inference.doctree  utilities.doctree
.doctrees/notebooks/: create_spycon_method.doctree  create_test.doctree  train_eann.doctree  tutorial.doctree  use_eann.doctree
.github/workflows/: docs.yml
_downloads/0c9ddf1e114738d15e94808b31b921cb/: sci_template.py
_downloads/358838ad359409356bc9636d3c6a1f01/: sci_glmcc.py
_downloads/721d8a4dc6d90118aa4fb59b030e4479/: sci_ci.py
_downloads/89df51ebb7903b3381ed7b0011b66423/: sci_dsttc.py
_downloads/c382a35977e53a6d8217800b034a2e35/: sci_sccg.py
_downloads/ec1fa61528b9b494344f3f139939f5c0/: sci_idtxl.py
_downloads/f7d76ad1e425234117b4b662f34f56d4/: spycon_tests.py
_sources/: README.md  index.rst  inference.rst
_sources/notebooks/: create_spycon_method.ipynb  create_test.ipynb  train_eann.ipynb  use_eann.ipynb
data/gt_data/: sim1917Cell1Block1_tiny.npz  (+2 more)
docs/: README.md  conf.py  index.rst  requirements.txt  utilities.rst
notebooks/: create_spycon_method.html  create_spycon_method.ipynb  create_test.html  create_test.ipynb  train_eann.html  train_eann.ipynb  tutorial.html  tutorial.ipynb  use_eann.html  use_eann.ipynb
scripts/: train_eANN.py
spycon/: __init__.py  benchmark.py  spycon_inference.py  spycon_result.py
(+30 files in other folders)
