[metadata]
name = spycon
version = 0.0.1
license = MIT
description = neuronal connectivity inference
long_description = file: README.rst
author = Christian Donner
author_email = christian.research(at)mailbox.org
classifiers=
   Topic :: Scientific/Engineering
   Programming Language :: Python

[options]
packages = find:
package_dir =
    =.
include_package_data = True
install_requires =
   numpy >= 1.19.5
   scipy >= 1.7.3
   torch >= 0.1.60
   elephant>=0.8.0
   pyinform>=0.2.0
   networkx>=2.0.0
   tqdm>=4.0.0

[options.packages.find]
where=.